<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    tools:context=".Oefenen1tm10">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen1"
        android:text="@string/button1"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen2"
        android:text="@string/_2"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="32dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen3"
        android:text="@string/_3"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen4"
        android:text="@string/_4"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen5"
        android:text="@string/_5"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen6"
        android:text="@string/_6"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="289dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToMainActivity"
        android:text="oefenen"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_Container" />

    <Button
        android:id="@+id/button9"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen7"
        android:text="@string/_7"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen8"
        android:text="@string/_8"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen9"
        android:text="@string/_9"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToSommen10"
        android:text="@string/_10"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button13"
        android:layout_width="105dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToOef11tm20"
        android:text="@string/_11_t_m_20"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <FrameLayout
        android:id="@+id/Title_Container"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:background="#72D6EC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

    </FrameLayout>

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/rekentuin"
        android:textAlignment="center"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/Title_Container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Title_Container"
        app:layout_constraintVertical_bias="0.666" />


</android.support.constraint.ConstraintLayout>