<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/background_blue"
        android:layout_width="605dp"
        android:layout_height="768dp"
        android:background="#66BDD0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/Title_Container"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="#72D6EC"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/luckiest_guy"
            android:text="@string/rekentuin"
            android:textAlignment="center"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Title_Container"
            app:layout_constraintVertical_bias="0.0" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/white_background"
        android:layout_width="336dp"
        android:layout_height="594dp"
        android:alpha="0.79"
        android:background="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_Container">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/introductie"
        android:layout_width="297dp"
        android:layout_height="155dp"
        android:alpha="0.3"
        android:background="#66BDD0"
        app:layout_constraintBottom_toBottomOf="@+id/white_background"
        app:layout_constraintEnd_toEndOf="@+id/white_background"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/white_background"
        app:layout_constraintTop_toTopOf="@+id/white_background"
        app:layout_constraintVertical_bias="0.105">

    </FrameLayout>

    <TextView
        android:id="@+id/introductie_tekst"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/klaar_om_te_leren"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/introductie"
        app:layout_constraintEnd_toEndOf="@+id/introductie"
        app:layout_constraintStart_toStartOf="@+id/introductie"
        app:layout_constraintTop_toTopOf="@+id/introductie" />

    <Button
        android:id="@+id/Oefenen"
        android:layout_width="294dp"
        android:layout_height="70dp"
        android:layout_marginTop="308dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToOefenen1tm10"
        android:text="@string/oefenen"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_Container" />

    <Button
        android:id="@+id/Toetsen"
        android:layout_width="294dp"
        android:layout_height="70dp"
        android:layout_marginTop="392dp"
        android:background="#66BDD0"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:onClick="goToToetsen1tm10"
        android:text="@string/toetsen"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_Container" />

</android.support.constraint.ConstraintLayout>